<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name">

            <ImageView
                android:id="@+id/iv_1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:padding="5sp"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/iv_2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:padding="5sp"
                tools:srcCompat="@tools:sample/avatars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name">

            <ImageView
                android:id="@+id/iv_3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:padding="5sp"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/iv_4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:padding="5sp"
                tools:srcCompat="@tools:sample/avatars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name">

            <ImageView
                android:id="@+id/iv_5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:padding="5sp"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/iv_6"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:padding="5sp"
                tools:srcCompat="@tools:sample/avatars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name">

            <ImageView
                android:id="@+id/iv_7"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:padding="5sp"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/iv_8"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:padding="5sp"
                tools:srcCompat="@tools:sample/avatars" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/et_titulo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="Reiniciar"
        android:text="@string/btn_reiniciar"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv1"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv3"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_4"
        app:layout_constraintStart_toEndOf="@+id/tv_1" />

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_2" />

    <TextView
        android:id="@+id/tv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv5"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_6"
        app:layout_constraintStart_toEndOf="@+id/tv_3" />

    <TextView
        android:id="@+id/tv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/tv6"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_4" />

    <TextView
        android:id="@+id/tv_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv7"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_8"
        app:layout_constraintStart_toEndOf="@+id/tv_5" />

    <TextView
        android:id="@+id/tv_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/tv8"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_6" />

    <TextView
        android:id="@+id/tv_r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_resultado1"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_r2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_resultado2"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>